syntax = "proto3";

package io.harness.perpetualtask.datacollection;

option java_multiple_files = true;

message DataCollectionPerpetualTaskParams {
  string account_id = 1;
  string cv_config_id = 2;
  bytes data_collection_info = 3;
  string verification_task_id = 4;
  string data_collection_worker_id = 5;
}
